Fix spacing between no-answer prompt and comments section

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -108,6 +108,7 @@ body {
 
     .no-answer-container {
       padding-top: 10em;
+      padding-bottom: 10em;
       width: 100%;
       text-align: center;
 
